<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Maydonium</string>
    <string name="tilni_tanlang" translatable="false">Choose Your Preferred Language</string>
    <string name="iltimos_til" translatable="false">Please select your language</string>
    <string name="nomer">Phone Number</string>
    <string name="tasdiqlash_cod">We will send you confirm code</string>
    <string name="raqamingiz">Enter your mobile number</string>
    <string name="davom_etish">Continue</string>
    <string name="google_bilan">Continue with Google</string>
    <string name="sms_kod">An SMS code will be sent to you shortly</string>
    <string name="sms_yubormoqdamiz">We are sending you an sms code</string>
    <string name="kod_kiriting">Please enter the incoming code</string>
    <string name="hato_kiritildi">Code entered incorrectly…</string>
    <string name="otp_tekshiruv">OTP Verification</string>
    <string name="kod_yuborildi">An Authentecation code has been sent to:</string>
    <string name="kod_kelmadimi">Didn’t receive code?</string>
    <string name="qayta_yuborish">Receive Again.</string>
    <string name="muvofaqiyatli">Successful</string>
    <string name="register">Register</string>
    <string name="getting_started">Getting Started</string>
    <string name="seems_you">Seems you are new here, Let’s set up your profile</string>
    <string name="name">Name</string>
    <string name="lost_name">Lost Name</string>
    <string name="by_creating">By creating an account, you agree to our</string>
    <string name="bosh_sahifa">Home</string>
    <string name="stadionlar">Stadiums</string>
    <string name="musobaqalar">Competitions</string>
    <string name="koproq">More</string>
    <string name="continue_with_google">Continue with Google</string>
    <string name="toast_shart">Agree to our terms!</string>
    <string name="language">Language</string>
    <string name="tel_raqam"><b>Phone number - </b>
  <a href="tel:+998938032329">+99893 803 23 29</a></string>
    <string name="elektron_pochta"><b>Email - </b>
    <a href="gmail:ekstremal95@gmail.com">ekstremal95@gmail.com</a></string>
    <string name="pravicy_and_security">Pravicy and security</string>
    <string name="maydon24_ilovasi_foydalanuvchi_shartlar">Terms of use of the application Maydonium:</string>
    <string name="police_barchasi">To take full advantage of the app, your phone must have GPS access to the app. If you want to cancel a busy area for any reason, you must notify the administrator 12 hours in advance, otherwise you will have to pay a fee for the site.  If payment is not made, the administration will have to take appropriate action. The administration guarantees that user data will not be distributed to third parties.</string>
    <string name="notifications_more">Notifications</string>
    <string name="saved_more">Saved</string>
    <string name="mybooking_more">My booking</string>
    <string name="myaccount_more">My account</string>
    <string name="aboutus_more">About Us</string>
    <string name="share_more">Share</string>
    <string name="change_language_more">Change language</string>
    <string name="police_and_security">Policy and security</string>
    <string name="logout_more">Log Out</string>
    <string name="about_us">About us</string>
    <string name="maydon24_ilovasi_sport_maydonlarini_band_etish_xizmati">Maydonium application sports field occupancy service.</string>
    <string name="kontakt_ma_lumotlari">Contact information:</string>
    <string name="elektron_pochta2">Email -</string>
    <string name="ijtimoiy_tarmoqlardagi_sahifalarimiz">Our social network pages:</string>
    <string name="comming_son">Coming son…</string>
    <string name="details">Details</string>
    <string name="free_times">Free times</string>
    <string name="ushbu_sanada_bo_sh_vaqtlar_mavjud_emas">There is no free time on this date</string>
    <string name="location">Location</string>
    <string name="football_all">Football All</string>
    <string name="booking">Booking</string>
    <string name="book_details">Book details</string>
    <string name="booking_date">Booking date:</string>
    <string name="booking_during">Booking during:</string>
    <string name="total">Hour:</string>
    <string name="cancel">Cancel</string>
    <string name="book_now">Book Now</string>
    <string name="edit_profile">Edit profile</string>
    <string name="save">Save</string>
    <string name="add_sport">+ Add sport</string>
    <string name="bowling">Bowling</string>
    <string name="tennis">Tennis</string>
    <string name="football">Football</string>
    <string name="filter">Filter</string>
    <string name="preferences">Preferences</string>
    <string name="sanani_kiriting">Enter the date …</string>
    <string name="reset">Reset</string>
    <string name="done">Done</string>
    <string name="nearby_stadiums">Nearby Stadiums</string>
    <string name="see_all">See All</string>
    <string name="diqqat">ATTENTION!</string>
    <string name="dasturni_ishlatish_uchun_internet_ishlashi_kerak">The internet must work to use the program!</string>
    <string name="yangilash">Update</string>
    <string name="are_you_sure_log_out">Are you sure log out?</string>
    <string name="you_can_then_restore_your_profile_again_by_entering_your_phone_number">You can then restore your profile again by entering your phone number</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="yuklanmoqda">Loading</string>
    <string name="yoqqanlari">Joined the list of favorites!</string>
    <string name="yoqqanlari_olibTashlash">Removed from favorites!</string>
    <string name="ilovadan_yana">To continue using the application, remind the site administration about the activation of your account during the post-game payment process.</string>
    <string name="diqqat_agar_maydonni">Attention!  If you want to book an area for 2 hours, you can book an area twice in a row for 1 hour.</string>
    <string name="vaqtni_kiriting">Enter the time …</string>
    <string name="siz_admin_tarafidan_bloklandingiz">You are blocked by admin</string>
    <string name="pawn_money">Advance payment</string>
    <string name="extant">Yes</string>
    <string name="choose">Choice of free time</string>
    <string name="pay">Payment</string>
    <string name="your_plastic_information">Your plastic information</string>
    <string name="plastic_number">Plastic number</string>
    <string name="month_year">Month/Year</string>
    <string name="error">Error!</string>
    <string name="try_again">The sms code was entered incorrectly or there is not enough money in your account, please try again</string>
    <string name="tel_raqamingiz">Enter your phone number</string>
    <string name="version_eski">Please update your version of the program!</string>
</resources>