<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".payment.PayInfoActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/ttfirsneue_medium"
        android:text="@string/your_plastic_information"
        android:textColor="@color/black"
        android:textSize="22sp" />

    <EditText
        android:id="@+id/paymentInfo_number"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="15dp"
        android:background="@drawable/edit_background"
        android:fontFamily="@font/ttfirsneue_regular"
        android:hint="@string/plastic_number"
        android:inputType="number"
        android:maxLength="16"
        android:padding="12dp"
        android:textColor="#171618"
        android:textColorHint="#A3171618"
        android:textSize="17sp" />

        <com.santalu.maskedittext.MaskEditText
            android:id="@+id/paymentInfo_month"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/edit_background"
            android:hint="@string/month_year"
            android:gravity="center"
            app:met_mask="##/##"
            android:layout_gravity="center"
            android:inputType="number"
            android:textColor="#171618"
            android:textColorHint="#A3171618"
            android:textSize="17sp" />

    <Button
        android:id="@+id/payInfo_btn"
        android:layout_width="339dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_radius"
        android:fontFamily="@font/andada"
        android:text="@string/pay"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/transactionIdInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone" />

</LinearLayout>