<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".more.AboutActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/about_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/language_more_txt"
            android:layout_width="170dp"
            android:layout_height="23dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ttfirsneue_medium"
            android:gravity="center"
            android:text="@string/about_us"
            android:textColor="#171618"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:fontFamily="@font/ttfirsneue_medium"
        android:text="@string/maydon24_ilovasi_sport_maydonlarini_band_etish_xizmati"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/ttfirsneue_medium"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/kontakt_ma_lumotlari"
        android:layout_marginEnd="15dp"/>

    <TextView
        android:id="@+id/number_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/ttfirsneue_light"
        android:textSize="16sp"
        android:textColor="@color/black"
        android:text="@string/tel_raqam"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal"
        android:layout_marginTop="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ttfirsneue_light"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:text="@string/elektron_pochta2"/>

        <TextView
            android:id="@+id/gmail_about"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ttfirsneue_light"
            android:textSize="16sp"
            android:padding="10dp"
            android:textColor="@color/menu"
            android:text="maydonium@gmail.com"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/ttfirsneue_medium"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:text="@string/ijtimoiy_tarmoqlardagi_sahifalarimiz"
        android:layout_marginEnd="15dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp">
        
        <ImageView
            android:id="@+id/about_facebook"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/about_background"
            android:src="@drawable/about_facebook"
            android:padding="5dp"/>

        <ImageView
            android:id="@+id/about_instagram"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/about_background"
            android:src="@drawable/about_instagram"
            android:padding="8dp"
            android:layout_marginStart="15dp"/>

        <ImageView
            android:id="@+id/about_telegram"
            android:layout_width="46dp"
            android:layout_height="46dp"
            android:background="@drawable/about_background"
            android:src="@drawable/about_telegram"
            android:padding="8dp"
            android:layout_marginStart="15dp"/>
        
    </LinearLayout>

</LinearLayout>