<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".more.PoliceActivity"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/police_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:id="@+id/language_more_txt"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ttfirsneue_medium"
            android:gravity="center"
            android:text="@string/pravicy_and_security"
            android:textColor="#171618"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/ttfirsneue_medium"
        android:text="@string/maydon24_ilovasi_foydalanuvchi_shartlar"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:fontFamily="@font/ttfirsneue_light"
        android:textSize="17sp"
        android:text="@string/police_barchasi"
        android:layout_marginEnd="15dp"/>

</LinearLayout>