<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment_top_menu.FilterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <ImageView
            android:id="@+id/filter_back"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/ic_arrow_back"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="170dp"
            android:layout_height="23dp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/ttfirsneue_medium"
            android:gravity="center"
            android:text="@string/filter"
            android:textColor="#171618"
            android:textSize="18sp" />

    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/ttfirsneue_medium"
        android:text="@string/preferences"
        android:textColor="@color/black"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/calendar_filter"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="40dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:fontFamily="@font/ttfirsneue_regular"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/sanani_kiriting"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/calendar" />

    <EditText
        android:id="@+id/date_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:visibility="gone" />

    <Spinner
        android:id="@+id/time_filter"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="35dp"
        android:layout_marginRight="15dp"
        android:background="@drawable/edit_background"
        android:fontFamily="@font/ttfirsneue_regular"
        android:gravity="center"
        android:padding="15dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/calendar" />

    <EditText
        android:id="@+id/time_edit_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="17sp"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="15dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/filter_res_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="65dp"
            android:background="@drawable/btn_radius_off"
            android:text="@string/reset"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:textColor="@color/menu"
            android:textSize="16sp" />

        <Button
            android:id="@+id/filter_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="65dp"
            android:layout_marginStart="5dp"
            android:background="@drawable/btn_radius"
            android:text="@string/done"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>

</LinearLayout>