<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".arena_fragments.ArenaFootballFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_football_arena"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/btn_radius"
            android:drawableStart="@drawable/ic_radio_checked"
            android:lines="1"
            android:padding="5dp"
            android:text="@string/football"
            android:textAllCaps="false"
            android:textColor="@color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_tennis_arena"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/radio_btn"
            android:lines="1"
            android:text="@string/tennis"
            android:textAllCaps="false"
            android:textColor="#405CBF"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_bowling_arena"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/radio_btn"
            android:lines="1"
            android:text="@string/bowling"
            android:textAllCaps="false"
            android:textColor="#405CBF"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/btn_add_arena"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:background="@drawable/radio_btn"
            android:lines="1"
            android:text="@string/add_sport"
            android:textAllCaps="false"
            android:textColor="#405CBF"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ImageView
                android:layout_width="339dp"
                android:layout_height="129dp"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:background="@drawable/arena_football_skidka" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="15dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/test"
                    android:layout_width="230dp"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/ttfirsneue_demibold"
                    android:text="@string/nearby_stadiums"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/football_arena_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:drawablePadding="5dp"
                    android:fontFamily="@font/ttfirsneue_regular"
                    android:text="@string/see_all"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    app:drawableEndCompat="@drawable/ic_arrow_forward" />

            </RelativeLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/arena_football_recycler"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/test_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="salobn"/>

                <TextView
                    android:id="@+id/test_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:text="28_04_2022"/>

                <ImageView
                    android:id="@+id/img_home_emas"
                    android:layout_width="wrap_content"
                    android:layout_height="85dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentBottom="true"
                    tools:ignore="ContentDescription" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>