<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:padding="8dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@drawable/log_out_background"
        android:orientation="vertical"
        android:paddingStart="16dp"
        android:paddingTop="48dp"
        android:paddingEnd="16dp"
        android:paddingBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ttfirsneue_demibold"
            android:gravity="center"
            android:text="@string/are_you_sure_log_out"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
            android:textSize="26sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ttfirsneue_regular"
            android:gravity="center"
            android:text="@string/you_can_then_restore_your_profile_again_by_entering_your_phone_number"
            android:textSize="16sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginTop="16dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:padding="10dp">

            <Button
                android:id="@+id/log_yes"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginEnd="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_radius_off"
                android:fontFamily="@font/ttfirsneue_medium"
                android:text="@string/yes"
                android:textAllCaps="false"
                android:textColor="@color/menu"
                android:textSize="16sp" />

            <Button
                android:id="@+id/log_no"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:layout_weight="1"
                android:background="@drawable/btn_radius"
                android:fontFamily="@font/ttfirsneue_medium"
                android:text="@string/no"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="81dp"
        android:layout_height="81dp"
        android:gravity="center"
        android:background="@drawable/log_out_card"
        app:layout_constraintBottom_toTopOf="@id/linearLayout"
        app:layout_constraintEnd_toEndOf="@id/linearLayout"
        app:layout_constraintStart_toStartOf="@id/linearLayout"
        app:layout_constraintTop_toTopOf="@id/linearLayout" >

        <ImageView
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/emoji_rolling"/>

    </LinearLayout>
    


</androidx.constraintlayout.widget.ConstraintLayout>